# columnist

./: .clang-format  CMakeLists.txt  README.md  check_code_formatting.sh  format_sources.sh  fuzz_store.cpp  test_combined.cpp  test_functional.cpp  test_store.cpp  test_table.cpp  test_type_utils.cpp
.github/workflows/: build.yml
include/columnist/: functional.hpp  table.hpp  type_utils.hpp
include/store/: functional.hpp  store.hpp  table.hpp
tests/: CMakeLists.txt  fuzz_table.cpp  test_combined.cpp  test_functional.cpp  test_table.cpp  test_type_utils.cpp
